--- a/charts/kesaricryptogateway/Chart.yaml
+++ b/charts/kesaricryptogateway/Chart.yaml
@@ -1,6 +1,6 @@
-apiVersion: v2
+apiVersion: v1
 name: kesaricryptogateway
-description: A self-hosted and open-source cryptocurrency payment processor
+description: Full-featured gateway for Kesari crypto transactions
 
 # A chart can be either an 'application' or a 'library' chart.
 #
